cmake_minimum_required(VERSION 3.13)
project(tg C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(auto)
include_directories(tgl)
include_directories(tgl/auto)
include_directories(tgl/crypto)
include_directories(tgl/tl-parser)

add_executable(tg
        auto/auto-autocomplete.h
        auto/auto-fetch-ds.h
        auto/auto-fetch.h
        auto/auto-free-ds.h
        auto/auto-print-ds.h
        auto/auto-skip.h
        auto/auto-store-ds.h
        auto/auto-store.h
        auto/auto-types.h
        auto/constants.h
        tgl/auto/auto-autocomplete.c
        tgl/auto/auto-autocomplete.h
        tgl/auto/auto-fetch-ds.c
        tgl/auto/auto-fetch-ds.h
        tgl/auto/auto-fetch.c
        tgl/auto/auto-fetch.h
        tgl/auto/auto-free-ds.c
        tgl/auto/auto-free-ds.h
        tgl/auto/auto-print-ds.c
        tgl/auto/auto-print-ds.h
        tgl/auto/auto-skip.c
        tgl/auto/auto-skip.h
        tgl/auto/auto-store-ds.c
        tgl/auto/auto-store-ds.h
        tgl/auto/auto-store.c
        tgl/auto/auto-store.h
        tgl/auto/auto-types.c
        tgl/auto/auto-types.h
        tgl/auto/constants.h
        tgl/crypto/aes.h
        tgl/crypto/aes_altern.c
        tgl/crypto/aes_openssl.c
        tgl/crypto/bn.h
        tgl/crypto/bn_altern.c
        tgl/crypto/bn_openssl.c
        tgl/crypto/err.h
        tgl/crypto/err_altern.c
        tgl/crypto/err_openssl.c
        tgl/crypto/md5.h
        tgl/crypto/md5_altern.c
        tgl/crypto/md5_openssl.c
        tgl/crypto/meta.h
        tgl/crypto/rand.h
        tgl/crypto/rand_altern.c
        tgl/crypto/rand_openssl.c
        tgl/crypto/rsa_pem.h
        tgl/crypto/rsa_pem_altern.c
        tgl/crypto/rsa_pem_openssl.c
        tgl/crypto/sha.h
        tgl/crypto/sha_altern.c
        tgl/crypto/sha_openssl.c
        tgl/tl-parser/portable_endian.h
        tgl/tl-parser/tl-parser-tree.h
        tgl/tl-parser/tl-parser.c
        tgl/tl-parser/tl-parser.h
        tgl/tl-parser/tl-tl.h
        tgl/tl-parser/tlc.c
        tgl/auto-static-autocomplete.c
        tgl/auto-static-fetch.c
        tgl/auto-static-print-ds.c
        tgl/auto-static-skip.c
        tgl/auto-static-store.c
        tgl/auto-static.c
        tgl/auto.h
        tgl/binlog.c
        tgl/config.h
        tgl/event-old.h
        tgl/generate.c
        tgl/generate.h
        tgl/mime-types.c
        tgl/mtproto-client.c
        tgl/mtproto-client.h
        tgl/mtproto-common.c
        tgl/mtproto-common.h
        tgl/mtproto-key.c
        tgl/mtproto-key.h
        tgl/mtproto-utils.c
        tgl/mtproto-utils.h
        tgl/no-preview.h
        tgl/queries-encrypted.c
        tgl/queries.c
        tgl/queries.h
        tgl/structures.c
        tgl/tg-mime-types.c
        tgl/tg-mime-types.h
        tgl/tgl-binlog.h
        tgl/tgl-fetch.h
        tgl/tgl-inner.h
        tgl/tgl-layout.h
        tgl/tgl-methods-in.h
        tgl/tgl-net-inner.h
        tgl/tgl-net.c
        tgl/tgl-net.h
        tgl/tgl-queries.h
        tgl/tgl-structures.h
        tgl/tgl-timers.c
        tgl/tgl-timers.h
        tgl/tgl.c
        tgl/tgl.h
        tgl/tools.c
        tgl/tools.h
        tgl/tree.h
        tgl/updates.c
        tgl/updates.h
        config.h
        event-old.h
        interface.c
        interface.h
        json-tg.c
        json-tg.h
        LICENSE.h
        loop.c
        loop.h
        lua-tg.c
        lua-tg.h
        main.c
        python-tg.c
        python-tg.h
        python-types.c
        python-types.h
        telegram.h)
